--- a/Pipfile
+++ b/Pipfile
@@ -7,9 +7,8 @@ verify_ssl = true
 
 [packages]
 flask = "*"
-flask-sqlalchemy = "*"
 python-dotenv = "*"
-psycopg2-binary = "*"
+psycopg2 = "*"
 
 [requires]
 python_version = "3.8"
